svc.yml.yaml
apiVersion: v1
kind: Service
metadata:
  name: airtag-service
spec:
  type: ClusterIP
  selector:
    app: airtag
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: bike-service
spec:
  type: ClusterIP
  selector:
    app: bike
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
