ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: myapp-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: homepage-service
              port:
                number: 80
        - path: /airtag
          pathType: Prefix
          backend:
            service:
              name: airtag-service
              port:
                number: 80
        - path: /bike
          pathType: Prefix
          backend:
            service:
              name: bike-service
              port:
                number: 80
